refactor: convert class form to a drawer
